# monistor

./: .gitignore  Makefile  metadata.json  tsconfig.json
monistor-rs/: Cargo.toml  monitorconfigd.service
monistor-rs/src/: codegen.rs  interface.rs  lib.rs  update.rs
scripts/: compile_rust.sh  transpile.sh
src/: extension.ts  log.ts  mod.d.ts  monitor_service.ts
