[package]
name = "monistor-rs"
version = "0.1.0"
edition = "2018"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0
codegen-units = 48

[profile.release]
incremental = true
debug = 0
lto = true
codegen-units = 1

[[bin]]
name = "monistord"

[dependencies]
dbus-tree = "0.9.1"
dbus-tokio = "0.7.4"
dbus = "0.9.3"
futures-util = "0.3.17"
futures = "0.3.17"
tokio = { version = "1.11", features = ["macros", "rt" ] }
log = "0.4"
simple_logger = "1.13.0"
async-trait = "0.1.51"
anyhow = "1"